[FIX] fix styling issues (mainly vertical alignment) after adding DOCTYPE html into document.

--- a/Resources/Private/Less/Elements/_other.less
+++ b/Resources/Private/Less/Elements/_other.less
@@ -106,7 +106,8 @@ body {
   right: 0;
   left: auto;
   background: none;
-  font-size: 24px;
+  font-size: 1em;
+  line-height: 1em;
   border: 0;
   border-left: 1px solid darken(@color-t3-gray-dark, 10%);
   border-radius: 0;
